# skyline

./: .gitmodules  .prettierrc  .prettierrc.toml  LICENSE  README.md  ROADMAP.md  app.ts  index.html  package-lock.json  package.json  snowpack.config.js  tsconfig.json
components/: codeeditor.tsx
components/code/: codeEditor.tsx  main.tsx  tokenizer.tsx
components/code/languages/: index.ts  typescript.ts
components/code/shortcuts/: copyCursor.ts  copyLine.ts  move.ts
components/code/util/: cursor.ts  selection.ts  text.ts
pages/: index.tsx  new.tsx
public/: default.txt  elixir.txt  index.html  sample.txt  small_sample.txt  test.txt
src/: App.css  App.tsx  default-config.ts  index.css  index.ts  index.tsx  types.ts
src-tauri/: Cargo.toml  greet.js  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: codeeditor.tsx
src/components/ContextMenu/: ContextMenu.module.css  ContextMenu.tsx
src/components/Navbar/: Navbar.module.css  Navbar.tsx
src/components/Sidebar/: Sidebar.module.css  Sidebar.tsx
src/components/Sidebar/File/: File.module.css  File.tsx
src/components/Sidebar/Folder/: Folder.module.css  Folder.tsx
src/components/Sidebar/Topbar/: Topbar.module.css  (+1 more)
src/components/Titlebar/: Titlebar.module.css  Titlebar.tsx
src/components/code/: codeEditor.tsx  main.tsx  tokenizer.tsx
src/model/: Directory.ts  FileSystem.ts
src/shortcuts/: control-backspace.ts  copy-cursor-down.ts  copy-cursor-up.ts  paste.ts
src/utils/: insert-str-at-index.ts
styles/: CodeEditor.module.css  Home.module.css  globals.css
(+6 files in other folders)
